--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Exo+2|Major+Mono+Display|Noto+Sans|Noto+Sans+JP|Noto+Sans+SC:700|Orbitron|Quantico|Roboto+Mono|Rubik|Source+Code+Pro|Work+Sans:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200" rel="stylesheet">     
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>dianne weinthal | info</title>
@@ -14,8 +14,7 @@
         <h1 class="name">dianne weinthal</h1>
       </header>
         
-        <p>Dianne Weinthal is orem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et velit posuere, dapibus mauris eu, maximus lacus. Mauris id sapien ultrices, ornare velit sed, luctus erat. Curabitur in est urna. Aliquam consectetur facilisis dictum. Donec lorem dui, iaculis eu accumsan vitae, consectetur eget nisl. Donec faucibus blandit purus, sed suscipit ex tempor interdum. Curabitur sed pharetra magna, ut pharetra sapien. Proin sed augue diam. Pellentesque vel lectus nec purus elementum sagittis nec varius mi. Quisque imperdiet congue lacus eget volutpat. </p>
-
+<p> Dianne Weinthal is an archivist, photographer, and book-maker based in Los Angeles, California. She works with ___, values ___, and aims to unite the two. Be in touch at dianne.weinthal@gmail.com"</p>
       <h2>contact</h2>
       dianne.weinthal@gmail.com <br>
       Los Angeles, CA
