--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">dianne weinthal</h1>
+        <h1 class="name">DIANNE WEINTHAL</h1>
       </header>
         
 <p> Dianne Weinthal is an archivist, photographer, and book-maker based in Los Angeles, California. She works with ___, values ___, and aims to unite the two. Be in touch at dianne.weinthal@gmail.com"</p>
