--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h2>PROFESSIONAL & STUDENT ORGANIZATIONS</h2>
       <h2>GRADUATE COURSEWORK & WORKSHOPS</h2>
       <h2>PUBLICATIONS</h2>
-      <h2>PUBLICATIONS</h2>
+      <h2>EXHIBITIONS</h2>
       <h2>COLLECTIONS</h2>
       
 
