--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200" rel="stylesheet">     
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
