--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   <br><br>
       
       <h2>PROGRAMS</h2>
-      Nov 2017 to Present - Nava Print Studio, Assistant Curator<br>
-      Academic Year 2018-19 - UCLA Alumni Mentorship, mentee<br>
-      Feb 2017 - Codex Bay Area Artist Residency, Program Director <br>
-      Mar to Sept 2017 - New England Archivists Society Mentoring Circle, participant
+      2017-Present - Nava Print Studio, Assistant Curator<br>
+      2018-19 - UCLA Alumni Mentorship, mentee<br>
+      2017 - Codex Bay Area Artist Residency, Program Director <br>
+      2017 - New England Archivists Society Mentoring Circle, participant
 <br><br>
       
       <h2>TECH & SKILLS</h2>
