--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
       <h2>ARCHIVES</h2>
       
       <p>Projects</p>
-      Hands-on, in-depth experience with processing, handling, rehousing, cataloging, digitizing, and publishing archival materials<br>
-      including photographic works, correspondence, and other paper elements<br>
-      in museum, gallery, and independent archival holdings. 
+      hands-on, in-depth experience with <b>processing, handling, rehousing, cataloging, digitizing, and publishing</b> archival materials<br>
+      in <b>museum, gallery, and independent</b> archival holdings 
     
 
       <p>Photography</p>
