--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
       University of Colorado Libraries, Boulder, Colorado
 <br><br>
          <h2>PHOTOGRAPHY</h2>
-      images portfolios available on <a href="https://dianneweinthal.com/"> dianneweinthal.photo</a>
+      images portfolios available on <a href="https://dianneweinthal.photo/"> dianneweinthal.photo</a>
 <br><br>
       
-      <b>last updated 2018-12-29</b>
+      <b>last updated 2019-01-06</b>
 
   </div>
   </div>
