--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <b>proficiency</b> - DSLR shooting & processing standards; alternative processes including wet plate, cyanotype, van dyke, and pinhole <br>
       <b>familiarity</b> - light exposure standards for exhibition & preservation; camera & equipment repair
       
-      <p>Platforms</p>
+      <p>Collection Management</p>
       CONTENTdm <br>
       EmbARK <br>
       Filemaker Pro
@@ -88,7 +88,6 @@
       file naming protocol <br>
       file integrity <br>
       file transfer & checksum
-
       
       <p>Data Visualization</p>
       mapping & spatial analysis <br>
