--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <br><br>
 
       <h2>PROFESSIONAL & STUDENT ORGANIZATIONS</h2>
-      Soceity of American Archivists - UCLA Chapter Vice President 2018-19, national member <br>
+      Society of American Archivists - UCLA Chapter Vice President 2018-19, national member <br>
       Art Libraries Society of North America - Southern California Chapter member <br>
       Artifacts - UCLA member <br>
       Horn Press - UCLA member <br>
