--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       Amon Carter Museum of American Art Library, Fort Worth, Texas<br>
       Art Narratives, Berlin, Germany<br>
       Hoxton Hotel, Los Angeles, California<br>
-      Private Collections: Chicago, Lemiers, Marfa, New York, Paris, San Fransisco, Santa Fe<br>
+      Private Collections: Chicago, Lemiers, Marfa, New York, Paris, San Francisco, Santa Fe<br>
       Printed Matter, New York, New York<br>
       Self Publish Be Happy, London, United Kingdom<br>
       University of Colorado Libraries, Boulder, Colorado
