conferences, no coursework

--- a/index.html
+++ b/index.html
@@ -121,20 +121,10 @@
       Horn Press - UCLA member <br>
       Justice Work Group - UCLA member
 <br><br>
-
-      <h2>GRADUATE COURSEWORK & WORKSHOPS</h2>
-      <p>Winter 2019, enrolled</p>
-        IS 270 Systems and Infrastructure <br>
-        IS 272 Human/Computer Interaction <br>
-        IS 289 Moving Image Technology <br>
-        <p>Fall 2018</p>
-        IS 211 Artifacts and Cultures<br>
-        IS 239 Letterpress Laboratory <br>
-        IS 260 Description and Access <br>
-        IS 289 Digital Methods for Research and Scholarship <br>
-        ArcGIS, UCLA Young Research Library <br>
-        Geo tagging with API, Stace Maples via GitHub <br>
-        Web Archiving, Internet Archive via ARLIS SoCal 
+      <h2>CONFERENCES</h2>
+      Art Libraries Society of North America - Salt Lake City, Utah 2019 | presenting "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study"<br>
+      Personal Digital Archives - Stanford, California 2017 | attended "PDA and the Arts"
+      
 <br><br>
   
        <h2>VOLUNTEER</h2>
