--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 <br><br>
 
       <h2>CONFERENCES</h2>
-      March 26-30, 2019 - Art Libraries Society of North America, Salt Lake City, Utah | presenting "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study"<br>
-      March 39, 2017 - Personal Digital Archives - Stanford, California | attended "PDA and the Arts"
+      March 26-30, 2019 - Art Libraries Society of North America, Salt Lake City, Utah<br> &nbsp;&nbsp;&nbsp;&nbsp; presenting "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study"<br>
+      March 39, 2017 - Personal Digital Archives, Stanford, California
       
 <br><br>
   
