--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 <br><br>
 
       <p>Volunteer</p>
-      2019-Present - UCLA Library, Equity, Diversity, & Inclusion committee member<br>
       2017-18 - Prisoners Literature Project, volunteer and book fair coordinator<br>
       2015-17 - Pier 24 Photography, collections librarian and gallery docent<br>
       2015-17 - Southern Exposure, auction art handler and bartender<br>
@@ -87,6 +86,7 @@
 <br><br>
       
             <p>Programs</p>
+            2019-Present - UCLA Library, Equity Diversity & Inclusion committee member<br>
       2017-Present - <a href="https://www.navaprintstudio.com/about/">Nava Print Studio</a>, Assistant Curator<br>
       2018-19 - UCLA Alumni Mentorship, mentee<br>
       2017 - Codex Bay Area Artist Residency, Program Director <br>
@@ -184,7 +184,7 @@
       images portfolios available on <a href="https://dianneweinthal.photo/"> dianneweinthal.photo</a>
 <br><br>
         
-      <b>last updated 2019-01-19</b>
+      <b>last updated 2019-01-31</b>
 
   </div>
   </div>
