--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Stanford University, 2014 | BA Art History, Modern & Contemporary
 <br><br>
       
-      <h2>PROFESSIONAL & RESEARCH EXPERIENCE</h2>
+      <h2>PROFESSIONAL EXPERIENCE</h2>
       <p><a href="http://www.library.ucla.edu/arts">UCLA Arts Library</a>, Reference Desk Assistant</p>  
       Oct 2018 - Present <br>
         Recommend research strategies and reference sources for patrons<br>
