--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       
             
        <h2>CONFERENCES & WORKSHOPS</h2>
-      March 26-30, 2019 - Art Libraries Society of North America, Salt Lake City, Utah - speaker<br> &nbsp;&nbsp;&nbsp;&nbsp; presenting "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study," at New Voices in the Profession session<br>
+      March 26-30, 2019 - Art Libraries Society of North America, Salt Lake City, Utah - speaker<br> &nbsp;&nbsp;&nbsp;&nbsp; presenting "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study"<br> &nbsp;&nbsp;&nbsp;&nbsp; at New Voices in the Profession session<br>
       February 8 & 22, 2019 - Risograph at UCLA, Los Angeles, California - instructor
       October 31, 2018 - Web Archiving, Internet Archive, Los Angeles, California - participant<br>
       October 3, 2018 - ArcGIS, Young Research Library, Los Angeles, California - participant<br>
