--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       </header>
         
 <p>archivist, photographer, and book-maker based in Los Angeles, California<br><br>
-  specializing in photographic material,<br> 
-  working on visual literacy, <br>
+  specializing in photographic material, working on visual literacy, <br>
   and aiming to unite those initiatives<br><br>
   be in touch - <a href="mailto:dianne.weinthal@gmail.com">dianne.weinthal@gmail.com</a></p>
 <br><br>
