--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       
             <p>Programs</p>
             2019-Present - UCLA Library Diversity Committee member on Equity, Diversity, and Inclusion policy statement initiative<br>
-      2017-Present - <a href="https://www.navaprintstudio.com/about/">Nava Print Studio</a>, Assistant Curator<br>
+      2019 - <a href="https://wsworkshop.org/">Women’s Studio Workshop</a> archive recommendations, coauthor <br>
+2017-Present - <a href="https://www.navaprintstudio.com/about/">Nava Print Studio</a>, Assistant Curator<br>
       2018-19 - UCLA Alumni Mentorship, mentee<br>
       2017 - Codex Bay Area Artist Residency, Program Director <br>
       2017 - New England Archivists Society Mentoring Circle, participant
