--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200" rel="stylesheet">     
+    <link rel="stylesheet" href="https://use.typekit.net/cov8sva.css">   
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="dw_shell.png" type="image/x-icon">
     <title>dianne weinthal | info</title>
