--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <h1 class="name">DIANNE WEINTHAL</h1>
       </header>
         
-      <p>archivist and artist based in Los Angeles, California</p>
-      <p>working with photography as artwork, as visual resource, and as digital information</p>
+      <p>archivist and artist based in Los Angeles, California<br>
+      working with photography as artwork, as visual resource, and as digital information<br>
   <p>be in touch - <a href="mailto:dianne.weinthal@gmail.com">dianne.weinthal@gmail.com</a></p>
-<br>
       
       <h2>education</h2>
       <p>UCLA, expected 2020 | MLIS, Informatics & Archives <br>
