--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
       EmbARK <br>
       Filemaker Pro
       
-      <p>Cataloging</p>
+      <p>Metadata</p>
+      descriptive, administrative and technical, including: <br>
       AAT <br>
       Dublin Core <br>
       LCSH <br>
@@ -191,9 +192,10 @@
 <br><br>
 
       <p>Exhibitions</p>
+      2019 - Various Library Books, UCLA Arts Library, Los Angeles (curator) <br>
       2018 - Dead House, Private Home, Palo Alto<br>
       2017 - Twenty-5 Gasoline Stations, Book/Shop, Oakland<br>
-      2016 - INFOCUS Juried Exhibition of Self Published Photobooks, Phoenix Art Museum<br>
+      2016 - INFOCUS Juried Exhibition of Self Published Photobooks, Phoenix Art Museum (group)<br>
       2015 - Telegraph Ave, Private Home, Oakland<br>
       2014 - Impossible 8x10, Subgallery, Stanford University
 <br><br>
@@ -209,7 +211,7 @@
 
 <br><br>
         
-      last updated 2019-04-14
+      last updated 2019-05-28
 
   </div>
   </div>
