--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
       Private Collections: Chicago, Lemiers, Marfa, New York, Paris, San Francisco, Santa Fe<br>
       Printed Matter, New York, New York<br>
       Self Publish Be Happy, London, United Kingdom<br>
-      University of Colorado Libraries, Boulder, Colorado
+      Univeristy of California, Los Angeles<br>
+      University of Colorado, Boulder, Colorado
 
 <br><br>
         
