--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>archivist and artist based in Los Angeles, California<br>
       working with photography as artwork, as visual resource, and as digital information<br>
       be in touch - <a href="mailto:dianne.weinthal@gmail.com">dianne.weinthal@gmail.com</a><br>
-      image portfolios - <a href="dianneweinthal.photo">dianneweinthal.photo</a></p>
+      image portfolios - <a href="https://dianneweinthal.photo/">dianneweinthal.photo</a></p>
       
       <h2>education</h2>
       <p>UCLA, expected 2020 | MLIS, Informatics & Archives <br>
