--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       Printed Matter, New York, New York<br>
       Self Publish Be Happy, London, United Kingdom<br>
       Univeristy of California, Los Angeles<br>
-      University of Colorado, Boulder, Colorado
+      University of Colorado, Boulder
 
 <br><br>
         
