--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
       Oct 2018 - Present <br>
         Recommend research strategies and reference sources for patrons<br>
         Provide guidance in the use of physical and online arts-related library resources<br>
-        Help users with library material relating to art, art history, film, television, theater, architecture, and design
+        Help users with library material relating to art, art history, film, television, theater, architecture, and design.
      
       <p><a href="https://www.library.ucla.edu/staff-departments/digital-library-program">UCLA Digital Library Program</a>, Student Staff</p>
       Summer 2019 <br>
-      Support the publication of rare and unique materials online via <br>
-      the UCLA Digital Library, the International Digital Ephemera Project, and the Sinai Palimpsests Project. <br>
-      Edit and review large-scale image file conversions and transfers, and create associated metadata. <br>
-      Evaluate project processes and contribute to workflow documentation.  
+      Produced digitization and post-processing workflow using darktable and XRITE for International Digital Ephemera Project partners <br>
+      Edited Python scripts for batch TIFF to PDF file conversion and Powershell scripts for directory inventory <br>
+      As member of three-student team, processed over 47,500 TIFF files and generated descriptive metadata for Islandora ingestion <br>
+      Conducted research and testing on efficacy of Abbyy FineReader OCR software for late 19th and early 20th century Spanish language periodicals. 
 
         
       <p><a href="http://cantorcollection.stanford.edu/IT_267?sid=457&x=81697&display=thu&x=81698">Cantor Arts Center</a>, Assistant Project Archivist</p>  
       Oct 2017 – Jul 2018 <br> 
-      Assisted with the digitization, cataloging, record management, research, and access of the <br>
+      Assisted with the digitization, cataloging, record management, design, research, and access of the <br>
       Andy Warhol Photography Collection in preparation for exhibition and publication of <i>Contact Warhol: Photography Without End</i> <br>
       including over 3600 contact sheets, accompanying 35mm negatives, and 130 thousand digital negative files. <br>
       Partnered with Stanford University Libraries to ingest all digital material and metadata <br>
