--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       Produced digitization and post-processing workflow using darktable and XRITE for International Digital Ephemera Project partners <br>
       Edited Python scripts for batch TIFF to PDF file conversion and Powershell scripts for directory inventory <br>
       As member of three-student team, processed over 47,500 TIFF files and generated descriptive metadata for Islandora ingestion <br>
+      on "El Figaro" and "La Lucha" Collections, available via <a href="http://idep.library.ucla.edu/">UCLA IDEP</a><br>
       Conducted research and testing on efficacy of Abbyy FineReader OCR software for late 19th and early 20th century Spanish language periodicals. 
 
         
