--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       Summer 2019 <br>
       Produced digitization and post-processing workflow using darktable and XRITE for International Digital Ephemera Project partners <br>
       Edited Python scripts for batch TIFF to PDF file conversion and Powershell scripts for directory inventory <br>
+      Conducted research and testing on efficacy of Abbyy FineReader OCR software for late 19th and early 20th c. Cuban periodicals <br>
       As member of three-student team, processed over 47,500 TIFF files and generated descriptive metadata for Islandora ingestion <br>
       on "El Figaro" and "La Lucha" Collections, available via <a href="http://idep.library.ucla.edu/">UCLA IDEP</a><br>
-      Conducted research and testing on efficacy of Abbyy FineReader OCR software for late 19th and early 20th century Spanish language periodicals. 
 
         
       <p><a href="http://cantorcollection.stanford.edu/IT_267?sid=457&x=81697&display=thu&x=81698">Cantor Arts Center</a>, Assistant Project Archivist</p>  
