--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       Andy Warhol Photography Collection in preparation for exhibition and publication of <i>Contact Warhol: Photography Without End</i> <br>
       including over 3600 contact sheets, accompanying 35mm negatives, and 130 thousand digital negative files. <br>
       Partnered with Stanford University Libraries to ingest all digital material and metadata <br>
-      into Stanford Digital Repository for simultaneous online exhibition. 
+      into Stanford Digital Repository for simultaneous <a href="https://exhibits.stanford.edu/warhol">online exhibition</a>. 
 
       
       <p><a href="https://juddfoundation.org/">Judd Foundation</a>, Archives and Programs Intern</p>  
