--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Provide guidance in the use of physical and online arts-related library resources<br>
         Help users with library material relating to art, art history, film, television, theater, architecture, and design.
       
-       <p><a href="https://gagosian.com/">Gagosian Gallery, Beverly Hills</a>, Library Intern</p>  
+       <p><a href="https://gagosian.com/">Gagosian Gallery</a>, Beverly Hills, Library Intern</p>  
       Sept 2019 - Present <br>
         Research artist bibliographies and catalog incoming publications for expanding library<br>
         Process collection of exhibition transparencies and produce finding aid for institutional archives<br>
@@ -100,9 +100,10 @@
         November 5-9, 2019 - Museum Computer Network, San Diego, California - speaker<br>
           &nbsp;&nbsp;&nbsp;&nbsp; "Through the Lens of Warhol: Museum and Library Multi-Platform Partnership at Stanford University" with Peg Brady, Clarissa Morales, Tiffany Sakato<br>
         October 23, 2019 - UCLA Open Access Week, Los Angeles, California - speaker<br>
-           &nbsp;&nbsp;&nbsp;&nbsp; "IIIF for Open Access" with Dawn Childress
+           &nbsp;&nbsp;&nbsp;&nbsp; "IIIF for Open Access" with Dawn Childress <br>
       July 24-25, 2019 - Library Carpentries Data Archive, Los Angeles, California - participant<br>
-      March 26-30, 2019 - Art Libraries Society of North America, Salt Lake City, Utah - speaker<br> &nbsp;&nbsp;&nbsp;&nbsp; "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study"<br> &nbsp;&nbsp;&nbsp;&nbsp;<br>
+      March 26-30, 2019 - Art Libraries Society of North America, Salt Lake City, Utah - speaker<br> 
+      &nbsp;&nbsp;&nbsp;&nbsp; "Institutional Interoperability: The Andy Warhol Photography Archive at Stanford University as Case Study"<br> 
       February 8 & 22, 2019 - Risograph at UCLA, Los Angeles, California - instructor <br>
       October 31, 2018 - Web Archiving, Internet Archive, Los Angeles, California - participant<br>
       October 3, 2018 - ArcGIS, Young Research Library, Los Angeles, California - participant<br>
