--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
             
        <h2>conferences & workshops</h2>
       <p>Upcoming</p>
-        April 20-24, 2020 - Art Libraries Society of North America, Saint Louis, Missouri - speaker <br>
-          &nbsp;&nbsp;&nbsp;&nbsp; "Independent photobooks: creating, distributing, collecting, exhibiting"<br>
+        "Independent photobooks: creating, distributing, collecting, exhibiting"<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;April 20-24, 2020 - Art Libraries Society of North America, Saint Louis, Missouri<br>
           
       <p>Previous</p>  
-      December 2, 2019 - Los Angeles County Museum of Art, Collection Information and Digital Assets Team Meeting - speaker<br>
-          &nbsp;&nbsp;&nbsp;&nbsp; "Andy Warhol Photography Archive: Case Study in IIIF Partnership"<br><br>
-      November 5-9, 2019 - Museum Computer Network, San Diego, California - speaker<br>
-          &nbsp;&nbsp;&nbsp;&nbsp; "Through the Lens of Warhol: Museum and Library Multi-Platform Partnership at Stanford University" with Peg Brady, Clarissa Morales, Tiffany Sakato<br><br>
+      "Andy Warhol Photography Archive: Case Study in IIIF Partnership"<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;December 2, 2019 - Los Angeles County Museum of Art, Collection Information and Digital Assets Team Meeting<br>
+      "Through the Lens of Warhol: Museum and Library Multi-Platform Partnership at Stanford University"<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;November 5-9, 2019 - Museum Computer Network, San Diego, California<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;with Peg Brady, Clarissa Morales, Tiffany Sakato<br>
       October 23, 2019 - UCLA Open Access Week, Los Angeles, California - speaker<br>
            &nbsp;&nbsp;&nbsp;&nbsp; "IIIF for Open Access" with Dawn Childress <br><br>
       July 24-25, 2019 - Library Carpentries Data Archive, Los Angeles, California - participant<br><br>
