--- a/index.html
+++ b/index.html
@@ -137,11 +137,12 @@
       
             <p>Programs</p>
       2019-Present - UCLA Library Diversity Committee member<br>
+      2020 - Contemporary Artists' Book Conference, Programming Committee member <br>
       2019 - Greater Los Angeles VA Community Archive recommmendations, digital preservation <br>
-      2019 - UCLA Collective: D|MA & IS, LA Art Book Fair co-director <br>
-      2019 - <a href="https://wsworkshop.org/">Women’s Studio Workshop</a> archive recommendations, coauthor <br>
+      2019 - UCLA Collective: D|MA & IS, LA Art Book Fair Co-Director <br>
+      2019 - <a href="https://wsworkshop.org/">Women’s Studio Workshop</a> archive recommendations, Coauthor <br>
       2017-2019 - <a href="https://www.navaprintstudio.com/about/">Nava Print Studio</a>, Assistant Curator<br>
-      2018-19 - UCLA Alumni Mentorship, mentee<br>
+      2018-19 - UCLA Alumni Mentorship, participant<br>
       2017 - Codex Bay Area Artist Residency, Program Director <br>
       2017 - New England Archivists Society Mentoring Circle, participant
 <br><br>
@@ -255,8 +256,8 @@
       University of Colorado, Boulder
 
 <br><br>
-        
-      last updated 2020-01-30
+      currently reading: <i>Ask the Dust</i> by John Fante<br>  
+      last updated: 2020-01-30
 
   </div>
   </div>
