--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
       University of Colorado, Boulder
 
 <br><br>
-      currently reading <i>Ask the Dust</i> by John Fante<br>  
-      last updated 2020-01-30
+      currently reading <i>How To Do Nothing</i> by Jenny Odell<br>  
+      last updated 2020-02-05
 
   </div>
   </div>
