--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/cov8sva.css">  
     <link rel="stylesheet" type="text/css" href="update.css">
-    <link rel="icon" href="dw_shell.png" type="image/x-icon">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
     <title>DIANNE WEINTHAL</title>
 
   </head>
