accessibility statement change

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Contact: dianne.weinthal (at) gmail.com<br>
 Lava lamp canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" class="underline">Dylan Dunaway</a></p>
 
 <p>
-This site aims to follow WCAG 2.1. If you experience accessibility issues, please be in touch with dianne.weinthal (at) gmail.com
+This site aims to follow WCAG 2.1. If you experience accessibility friction, please get in touch
 </p>
 </div>
 
