--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <div class="content">
 	<p>Image portfolios available at <a href="https://dianneweinthal.photo/" class="underline">dianneweinthal.photo</a> 
 	</p>
-	<p>Photography and photobooks included in the collections of <br>
-		Amon Carter Museum of American Art Library<br>
+	<h2>COLLECTIONS</h2>
+		<p>Amon Carter Museum of American Art Library<br>
 		Getty Research Institute<br>
 		Hoxton Hotel, Los Angeles <br>
 		University of California, Los Angeles<br>
@@ -41,15 +41,14 @@
 
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
-  <p>CURRENTLY <br>
-  Reference and Digital Support at UCLA Arts Library</p>
-  <p>CONSISTENTLY <br>
+  <h2>CURRENTLY </h2>
+  <p>Reference and Digital Support at UCLA Arts Library</p>
+  <h2>CONSISTENTLY </h2>
   image archives<br>
   information interoperability<br>
 digital asset and infrastructure management</p>
-  <p>PREVIOUSLY <br>
-  	Assistant Project Archivist for the Andy Warhol Photography Collection at Cantor Arts Center
-</p>
+  <h2>PREVIOUSLY</h2>
+  	<p>Assistant Project Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
 </div>
 
 <hr>
