--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
-  <h2>CURRENTLY </h2>
+  <h2>CURRENTLY</h2>
   <p>Reference and Digital Support at UCLA Arts Library</p>
-  <h2>CONSISTENTLY </h2>
-  image archives<br>
+  <h2>CONSISTENTLY</h2>
+  <p>image archives<br>
   information interoperability<br>
 digital asset and infrastructure management</p>
   <h2>PREVIOUSLY</h2>
@@ -55,8 +55,8 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">CONSULTATION</div></a>
 <div class="content">
-  <p>PROJECTS <br>
-  collection development strategy<br>
+  <h2>PROJECTS</h2>
+  <p>collection development strategy<br>
   digital asset management<br>
   digital infrastructure design<br>
   digitization initiatives and workflows<br>
@@ -64,16 +64,16 @@ digital asset and infrastructure management</p>
   personal archiving<br> 
   photographic materials & storage<br>  
 </p>
-  <p>PREVIOUS PARTNERS <br>
-  	Greater Los Angeles Veteran's Affairs Archive<br>
+  <h2>PREVIOUS PARTNERS</h2> 
+  	<p>Greater Los Angeles Veteran's Affairs Archive<br>
   	June L. Mazer Lesbian Archives<br>
   	Womens Studio Workshop<br>
   	Deadbeat Club Press<br>
   	Pier 24 Photography<br>
   	Todd Hido 
 </p>
-<p>FOR CONSULTATION <br>
-Be in touch with dianne.weinthal (at) gmail.com</p>
+<h2>FOR CONSULTATION</h2> 
+<p>Be in touch with dianne.weinthal (at) gmail.com</p>
 </div>
 
 <hr>
@@ -99,7 +99,7 @@ Lava lamp canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXo
 
 <p>
 This site aims to follow WCAG 2.1<br>
-If you experience accessibility friction, please get in touch
+Please get in touch if you experience accessibility friction
 </p>
 </div>
 
@@ -108,7 +108,7 @@ If you experience accessibility friction, please get in touch
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-03-27 <br>
+<p>Last updated: 2020-03-28 <br>
 Currently reading: <em>You Were Born For This</em> by Chani Nicholas</p>
 
 </footer>
