--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">CONSULTATION</div></a>
 <div class="content">
-  <h2>PROJECTS</h2>
+  <h2>AREAS OF FOCUS</h2>
   <p>collection development strategy<br>
   digital asset management<br>
   digital infrastructure design<br>
