--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   information interoperability<br>
 digital asset and infrastructure management</p>
   <h2>PREVIOUSLY</h2>
-  	<p>Assistant Project Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
+  	<p>Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
 </div>
 
 <hr>
@@ -57,6 +57,7 @@ digital asset and infrastructure management</p>
 <div class="content">
   <h2>AREAS OF FOCUS</h2>
   <p>collection development strategy<br>
+    data interoperability<br>
   digital asset management<br>
   digital infrastructure design<br>
   digitization initiatives and workflows<br>
@@ -89,7 +90,7 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She works on ways to make our interactions with images more aligned with how we create and share them. She cares about the social implications of image media and digital infrastructure design.
+<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She works on ways to make our interactions with images more aligned with how we create and share them. She cares about information access and interoperability. And she loves a good old fashioned lava lamp. 
 </p>
 <p>She holds a BA in Art History from Stanford University and is pursuing a Masters in Library and Information Science at UCLA, where her focus is on photography as artwork, as visual resource, and as digital information.
 </p>
@@ -108,8 +109,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-03-28 <br>
-Currently reading: <em>You Were Born For This</em> by Chani Nicholas</p>
+<p>Last updated: 2020-04-13 <br>
+Currently re-reading: <em>Another Roadside Attraction</em> by Tom Robbins</p>
 
 </footer>
 
