--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-04-13 <br>
-Currently re-reading: <em>Another Roadside Attraction</em> by Tom Robbins</p>
+<p>Last updated: 2020-04-21 <br>
+Currently reading: <em>Bubblegum</em> by Adam Levin</p>
 
 </footer>
 
