--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@ digital asset and infrastructure management</p>
   <p>collection development strategy<br>
     data interoperability<br>
   digital asset management<br>
+  digital content curation <br>
   digital infrastructure design<br>
   digitization initiatives and workflows<br>
   digital preservation<br>
+  exhibition and publication design<br>
   personal archiving<br> 
-  photographic materials & storage<br>  
+  photographic materials & storage<br> 
 </p>
   <h2>PREVIOUS PARTNERS</h2> 
   	<p>Greater Los Angeles Veteran's Affairs Archive<br>
-  	June L. Mazer Lesbian Archives<br>
+  	Los Angeles Contemporary Archive<br>
+    June L. Mazer Lesbian Archives<br>
   	Womens Studio Workshop<br>
   	Deadbeat Club Press<br>
   	Pier 24 Photography<br>
@@ -90,13 +93,13 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She works on ways to make our interactions with images more aligned with how we create and share them. She cares about information access and interoperability. And she loves a good old fashioned lava lamp. 
+<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them. And then she falls asleep early by purple lava lamp light. 
 </p>
 <p>She holds a BA in Art History from Stanford University and is pursuing a Masters in Library and Information Science at UCLA, where her focus is on photography as artwork, as visual resource, and as digital information.
 </p>
 <p>CV: <a href="DianneWeinthal_CV.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
-Lava lamp canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" class="underline">Dylan Dunaway</a></p>
+Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" class="underline">Dylan Dunaway</a></p>
 
 <p>
 This site aims to follow WCAG 2.1<br>
@@ -109,8 +112,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-04-21 <br>
-Currently reading: <em>Bubblegum</em> by Adam Levin</p>
+<p>Last updated: 2020-05-22 <br>
+Currently re-reading: <em>Another Roadside Attraction</em> by Tom Robbins</p>
 
 </footer>
 
