--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them. And then she falls asleep early by purple lava lamp light. 
+<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them. She falls asleep early by purple lava lamp light. 
 </p>
 <p>She holds a BA in Art History from Stanford University and is pursuing a Masters in Library and Information Science at UCLA, where her focus is on photography as artwork, as visual resource, and as digital information.
 </p>
