graduation CV update

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">EDUCATION</div></a>
 <div class="content">
-  <p>UCLA expected June 2020 | MLIS, Informatics & Archives 
+  <p>UCLA, 2020 | MLIS, Informatics & Archives 
 </p>
 <p>Stanford University, 2014 | BA Art History, Modern & Contemporary</p>
 </div>
@@ -95,9 +95,9 @@ digital asset and infrastructure management</p>
 <div class="content">
 <p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them. She falls asleep early by purple lava lamp light. 
 </p>
-<p>She holds a BA in Art History from Stanford University and is pursuing a Masters in Library and Information Science at UCLA, where her focus is on photography as artwork, as visual resource, and as digital information.
+<p>She holds a BA in Art History from Stanford University and recently completed her Masters in Library and Information Science at UCLA. Her focus is on photography as artwork, as visual resource, and as digital information.
 </p>
-<p>CV: <a href="DianneWeinthal_CV.pdf" aria-label="PDF document download link" class="underline">download</a><br>
+<p>CV: <a href="DianneWeinthal_CV_20200610.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" class="underline">Dylan Dunaway</a></p>
 
