--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them. She falls asleep early by purple lava lamp light. 
+<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them.
 </p>
-<p>She holds a BA in Art History from Stanford University and recently completed her Masters in Library and Information Science at UCLA. Her focus is on photography as artwork, as visual resource, and as digital information.
+<p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. Her focus is on photography as artwork, as visual resource, and as digital information. She falls asleep early by purple lava lamp light. 
 </p>
 <p>CV: <a href="DianneWeinthal_CV_20200610.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
@@ -112,8 +112,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-05-22 <br>
-Currently re-reading: <em>Another Roadside Attraction</em> by Tom Robbins</p>
+<p>Last updated: 2020-06-12 <br>
+Currently re-reading: <em>The Instructions</em> by Adam Levin</p>
 
 </footer>
 
