--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>Reference and Digital Support at UCLA Arts Library</p>
+  <p>Digital Humanities Graduate Reseacher, UCLA Information Studies</p>
   <h2>CONSISTENTLY</h2>
   <p>image archives<br>
   information interoperability<br>
 digital asset and infrastructure management</p>
   <h2>PREVIOUSLY</h2>
-  	<p>Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
+  	  <p>Reference and Digital Support at UCLA Arts Library</p>
+<p>Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
 </div>
 
 <hr>
@@ -97,7 +98,7 @@ digital asset and infrastructure management</p>
 </p>
 <p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. Her focus is on photography as artwork, as visual resource, and as digital information. She falls asleep early by purple lava lamp light. 
 </p>
-<p>CV: <a href="DianneWeinthal_CV_20200610.pdf" aria-label="PDF document download link" class="underline">download</a><br>
+<p>CV: <a href="DianneWeinthal_CV_20200622.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" class="underline">Dylan Dunaway</a></p>
 
@@ -112,8 +113,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-06-12 <br>
-Currently re-reading: <em>The Instructions</em> by Adam Levin</p>
+<p>Last updated: 2020-06-22 <br>
+Currently reading: <em>Pleasure Activism</em> written and gathered by adrienne maree brown</p>
 
 </footer>
 
