--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   information interoperability<br>
 digital asset and infrastructure management</p>
   <h2>PREVIOUSLY</h2>
-  	  <p>Reference and Digital Support at UCLA Arts Library</p>
-<p>Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
+  	  <p>Reference and Digital Support at UCLA Arts Library<br>
+Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
 </div>
 
 <hr>
