open link in new tab

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main role="main">
 	<a class="collapsible"><div class="invert">ART</div></a>
 <div class="content">
-	<p>Image portfolios available at <a href="https://dianneweinthal.photo/" class="underline">dianneweinthal.photo</a> 
+	<p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
 	</p>
 	<h2>COLLECTIONS</h2>
 		<p>Amon Carter Museum of American Art Library<br>
@@ -100,7 +100,7 @@ Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Ce
 </p>
 <p>CV: <a href="DianneWeinthal_CV_2020-06-22.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
-Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" class="underline">Dylan Dunaway</a></p>
+Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
 <p>
 This site aims to follow WCAG 2.1<br>
