--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Ce
 </p>
 <p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. Her focus is on photography as artwork, as visual resource, and as digital information. She falls asleep early by purple lava lamp light. 
 </p>
-<p>CV: <a href="DianneWeinthal_CV_2020-06-22.pdf" aria-label="PDF document download link" class="underline">download</a><br>
+<p>CV: <a href="DianneWeinthal_CV_2020-07-24.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
@@ -113,8 +113,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-06-22 <br>
-Currently reading: <em>Pleasure Activism</em> written and gathered by adrienne maree brown</p>
+<p>Last updated: 2020-07-24 <br>
+Currently reading: <em>Difficult Loves</em> by Italo Calvino</p>
 
 </footer>
 
