--- a/index.html
+++ b/index.html
@@ -42,14 +42,11 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>Digital Humanities Graduate Reseacher, UCLA Information Studies</p>
+  <p>Archivist at Nino Mier Gallery</p>
   <h2>CONSISTENTLY</h2>
   <p>image archives<br>
   information interoperability<br>
 digital asset and infrastructure management</p>
-  <h2>PREVIOUSLY</h2>
-  	  <p>Reference and Digital Support at UCLA Arts Library<br>
-Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Center</p>
 </div>
 
 <hr>
@@ -98,7 +95,7 @@ Assistant Archivist for the Andy Warhol Photography Collection at Cantor Arts Ce
 </p>
 <p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. Her focus is on photography as artwork, as visual resource, and as digital information. She falls asleep early by purple lava lamp light. 
 </p>
-<p>CV: <a href="DianneWeinthal_CV_2020-08-12.pdf" aria-label="PDF document download link" class="underline">download</a><br>
+<p>CV: <a href="DianneWeinthal_CV_2020-10-05.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
@@ -113,8 +110,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-08-12 <br>
-Currently reading: <em>Difficult Loves</em> by Italo Calvino</p>
+<p>Last updated: 2020-10-05 <br>
+Currently reading: <em>When Things Fall Apart</em> by Pema Chödrön</p>
 
 </footer>
 
