--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>Archivist at Nino Mier Gallery</p>
+  <p>Project Archivist at Los Angeles Contemporary Archive</p>
   <h2>CONSISTENTLY</h2>
   <p>image archives<br>
   information interoperability<br>
@@ -110,7 +110,7 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2020-10-05 <br>
+<p>Last updated: 2020-03-10 <br>
 Currently reading: <em>When Things Fall Apart</em> by Pema Chödrön</p>
 
 </footer>
