--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 <header role="banner">
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
-  	<p>working with image <br>
+  	<p>digital archivist <br>
+      focused on epistemic justice<br>
+      ///
+    </p>
+    <p>working with image <br>
   		as artwork <br>
   		as visual resource <br>
   		as digital information
@@ -65,7 +69,7 @@ digital asset and infrastructure management</p>
   personal archiving<br> 
   photographic materials & storage<br> 
 </p>
-  <h2>PREVIOUS PARTNERS</h2> 
+  <h2>PREVIOUS PROJECTS</h2> 
   	<p>Greater Los Angeles Veteran's Affairs Archive<br>
   	Los Angeles Contemporary Archive<br>
     June L. Mazer Lesbian Archives<br>
@@ -93,9 +97,9 @@ digital asset and infrastructure management</p>
 <div class="content">
 <p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them.
 </p>
-<p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. Her focus is on photography as artwork, as visual resource, and as digital information. She falls asleep early by purple lava lamp light. 
+<p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. She specializes in photography as artwork, as visual resource, and as digital information. She reads by purple lava lamp light. 
 </p>
-<p>CV: <a href="DianneWeinthal_CV_2020-10-05.pdf" aria-label="PDF document download link" class="underline">download</a><br>
+<p>CV: <a href="DianneWeinthal_CV_2021-03-21.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
@@ -110,8 +114,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-02-10 <br>
-Currently reading: <em>When Things Fall Apart</em> by Pema Chödrön</p>
+<p>Last updated: 2021-03-21 <br>
+Currently reading: <em>Apeirogon</em> by Colum McCann</p>
 
 </footer>
 
