--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
   	<p>digital archivist <br>
-      focused on epistemic justice<br>
-      ///
+      focused on epistemic justice,
     </p>
     <p>working with image <br>
   		as artwork <br>
