--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
   	<p>digital archivist <br>
-      focused on epistemic justice,
+      focused on epistemic justice
     </p>
     <p>working with image <br>
   		as artwork <br>
@@ -98,7 +98,7 @@ digital asset and infrastructure management</p>
 </p>
 <p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. She specializes in photography as artwork, as visual resource, and as digital information. She reads by purple lava lamp light. 
 </p>
-<p>CV: <a href="DianneWeinthal_CV_2021-03-21.pdf" aria-label="PDF document download link" class="underline">download</a><br>
+<p>CV: <a href="DianneWeinthal_CV_2021-04-06.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
@@ -113,8 +113,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-03-21 <br>
-Currently reading: <em>Apeirogon</em> by Colum McCann</p>
+<p>Last updated: 2021-04-07 <br>
+Currently reading: <em>The Rush for Second Place</em> by William Gaddis</p>
 
 </footer>
 
